--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <p>E estava. O Senhor Nic, impecavelmente vestido, segurava um livro, mas seus olhos fixos no horizonte denunciavam que sua mente vagava. Quando viu Pam, seu rosto suavizou, e um leve sorriso se formou. Antes de se espantar abrutamente.</p>
 
-    <p>— Você veio... — disse ele, baixando o tom de voz, para combinar com a sua altura. — Eu tinha medo de te confundir com um hidrante, que bom que veio de amarelo.</p>
+    <p>— Você veio... — disse ele, baixando o tom de voz, para combinar com a altura da dama. — Eu tinha medo de te confundir com um hidrante, que bom que veio de amarelo.</p>
 
     <p>— É a primeira coisa que você pensou, senhor porra? — Pam respondeu, tentando parecer confiante, mas sentindo o rubor nas bochechas. — Você é muito forte, Senhor Nic.</p>
 
